Adjusted contrast issues the audit tool identified

--- a/part2/style-contrast-audit/blog.css
+++ b/part2/style-contrast-audit/blog.css
@@ -40,7 +40,7 @@ h6,
  */
 
 .blog-masthead {
-  background-color: #428bca;
+  background-color: #29598A;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
   box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
 }
@@ -99,7 +99,7 @@ h6,
 
 .blog-description {
   font-size: 20px;
-  color: #999;
+  color: #595959;
 }
 
 /*
@@ -159,7 +159,7 @@ h6,
 
 .blog-post-meta {
   margin-bottom: 20px;
-  color: #999;
+  color: #595959;
 }
 
 /*
